8290715: Fix incorrect uses of G1CollectedHeap::heap_region_containing()

Reviewed-by: kbarrett, sangheki